// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders correctly 1`] = `
<header
  data-testid="header"
>
  <a
    class="sr-only focus:not-sr-only focus:bg-yellow-400 focus:border-b-4 focus:border-b-blue-700 focus:absolute focus:p-2 focus:rounded focus:top-4 focus:left-4 focus:z-50"
    href="#main"
  >
    Skip to content
  </a>
  <div
    class="relative z-20 flex items-center px-4 lg:hidden print:hidden"
  >
    <a
      aria-label="Evidence Hub"
      class="mx-auto min-w-[170px]"
      href="/en"
    >
      <img
        alt="Evidence Hub Logo"
        data-nimg="1"
        decoding="async"
        height="77.56"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
        style="color: transparent;"
        width="170"
      />
    </a>
    <div
      class="container-auto h-[134px] p-0 m-0 flex justify-center"
    >
      <details
        class="group w-[31px] ml-auto"
      >
        <summary
          class="open h-[134px] flex items-center justify-center cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
          data-testid="toggle-nav"
          title="Open menu"
        >
          <div
            class="group-open:hidden flex flex-col h-[38px] w-[38px] text-left absolute align-middle justify-center"
          >
            <svgr-mock
              classname="text-gray-800"
            />
          </div>
          <div
            class="hidden text-center group-open:block"
          >
            <div
              class="flex flex-col"
            >
              <svgr-mock
                classname="w-[30px]"
              />
            </div>
          </div>
        </summary>
        <div
          class="bg-white absolute z-10 top-[134px] w-full left-0"
        >
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
          <div
            class="pb-10"
          >
            <nav
              class="mb-4"
            >
              <ul />
            </nav>
            <div
              class="flex mx-4"
            >
              <a
                class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 p-0 underline text-sm ml-auto font-bold"
                href="/cy"
                hreflang="cy"
                lang="cy"
                rel="alternate"
              >
                <span
                  aria-describedby="lang-description"
                  class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
                >
                  Cymraeg
                </span>
              </a>
              <span
                class="sr-only"
                id="lang-description"
              >
                Newid yr iaith ir Gymraeg
              </span>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="hidden lg:block"
  >
    <div
      class="relative print:hidden"
    >
      <div
        class="container-auto flex items-center justify-center lg:justify-normal max-w-[1272px]"
      >
        <a
          aria-label="Evidence Hub"
          href="/en"
        >
          <img
            alt=""
            data-nimg="1"
            decoding="async"
            height="73"
            loading="lazy"
            src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
            srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
            style="color: transparent;"
            width="160"
          />
        </a>
        <div
          class="items-center hidden ml-auto lg:flex py-7"
        >
          <a
            class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 mr-6 p-0 underline text-sm ml-6"
            href="/cy"
            hreflang="cy"
            lang="cy"
            rel="alternate"
          >
            <span
              aria-describedby="lang-description"
              class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
            >
              Cymraeg
            </span>
          </a>
          <span
            class="sr-only"
            id="lang-description"
          >
            Newid yr iaith ir Gymraeg
          </span>
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      class="hidden lg:block"
    >
      <div
        class="container-auto max-w-[1272px] mt-5 mb-2"
      >
        <nav>
          <ul
            class="flex h-[40px] items-center"
          />
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header component renders correctly when the nav is opened with a CLICK 1`] = `
<header
  data-testid="header"
>
  <a
    class="sr-only focus:not-sr-only focus:bg-yellow-400 focus:border-b-4 focus:border-b-blue-700 focus:absolute focus:p-2 focus:rounded focus:top-4 focus:left-4 focus:z-50"
    href="#main"
  >
    Skip to content
  </a>
  <div
    class="fixed top-0 bottom-0 left-0 right-0 z-10 bg-black opacity-25 t-menu-overlay"
  />
  <div
    class="relative z-20 flex items-center px-4 lg:hidden print:hidden"
  >
    <a
      aria-label="Evidence Hub"
      class="mx-auto min-w-[170px]"
      href="/en"
    >
      <img
        alt="Evidence Hub Logo"
        data-nimg="1"
        decoding="async"
        height="77.56"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
        style="color: transparent;"
        width="170"
      />
    </a>
    <div
      class="container-auto h-[134px] p-0 m-0 flex justify-center"
    >
      <details
        class="group w-[31px] ml-auto"
        open=""
      >
        <summary
          class="close h-[134px] flex items-center justify-center cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
          data-testid="toggle-nav"
          title="Close menu"
        >
          <div
            class="group-open:hidden flex flex-col h-[38px] w-[38px] text-left absolute align-middle justify-center"
          >
            <svgr-mock
              classname="text-gray-800"
            />
          </div>
          <div
            class="hidden text-center group-open:block"
          >
            <div
              class="flex flex-col"
            >
              <svgr-mock
                classname="w-[30px]"
              />
            </div>
          </div>
        </summary>
        <div
          class="bg-white absolute z-10 top-[134px] w-full left-0"
        >
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
          <div
            class="pb-10"
          >
            <nav
              class="mb-4"
            >
              <ul />
            </nav>
            <div
              class="flex mx-4"
            >
              <a
                class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 p-0 underline text-sm ml-auto font-bold"
                href="/cy"
                hreflang="cy"
                lang="cy"
                rel="alternate"
              >
                <span
                  aria-describedby="lang-description"
                  class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
                >
                  Cymraeg
                </span>
              </a>
              <span
                class="sr-only"
                id="lang-description"
              >
                Newid yr iaith ir Gymraeg
              </span>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="hidden lg:block"
  >
    <div
      class="relative print:hidden"
    >
      <div
        class="container-auto flex items-center justify-center lg:justify-normal max-w-[1272px]"
      >
        <a
          aria-label="Evidence Hub"
          href="/en"
        >
          <img
            alt=""
            data-nimg="1"
            decoding="async"
            height="73"
            loading="lazy"
            src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
            srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
            style="color: transparent;"
            width="160"
          />
        </a>
        <div
          class="items-center hidden ml-auto lg:flex py-7"
        >
          <a
            class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 mr-6 p-0 underline text-sm ml-6"
            href="/cy"
            hreflang="cy"
            lang="cy"
            rel="alternate"
          >
            <span
              aria-describedby="lang-description"
              class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
            >
              Cymraeg
            </span>
          </a>
          <span
            class="sr-only"
            id="lang-description"
          >
            Newid yr iaith ir Gymraeg
          </span>
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      class="hidden lg:block"
    >
      <div
        class="container-auto max-w-[1272px] mt-5 mb-2"
      >
        <nav>
          <ul
            class="flex h-[40px] items-center"
          />
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header component renders correctly when the nav opened by a SPACE keypress 1`] = `
<header
  data-testid="header"
>
  <a
    class="sr-only focus:not-sr-only focus:bg-yellow-400 focus:border-b-4 focus:border-b-blue-700 focus:absolute focus:p-2 focus:rounded focus:top-4 focus:left-4 focus:z-50"
    href="#main"
  >
    Skip to content
  </a>
  <div
    class="fixed top-0 bottom-0 left-0 right-0 z-10 bg-black opacity-25 t-menu-overlay"
  />
  <div
    class="relative z-20 flex items-center px-4 lg:hidden print:hidden"
  >
    <a
      aria-label="Evidence Hub"
      class="mx-auto min-w-[170px]"
      href="/en"
    >
      <img
        alt="Evidence Hub Logo"
        data-nimg="1"
        decoding="async"
        height="77.56"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
        style="color: transparent;"
        width="170"
      />
    </a>
    <div
      class="container-auto h-[134px] p-0 m-0 flex justify-center"
    >
      <details
        class="group w-[31px] ml-auto"
        open=""
      >
        <summary
          class="close h-[134px] flex items-center justify-center cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
          data-testid="toggle-nav"
          title="Close menu"
        >
          <div
            class="group-open:hidden flex flex-col h-[38px] w-[38px] text-left absolute align-middle justify-center"
          >
            <svgr-mock
              classname="text-gray-800"
            />
          </div>
          <div
            class="hidden text-center group-open:block"
          >
            <div
              class="flex flex-col"
            >
              <svgr-mock
                classname="w-[30px]"
              />
            </div>
          </div>
        </summary>
        <div
          class="bg-white absolute z-10 top-[134px] w-full left-0"
        >
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
          <div
            class="pb-10"
          >
            <nav
              class="mb-4"
            >
              <ul />
            </nav>
            <div
              class="flex mx-4"
            >
              <a
                class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 p-0 underline text-sm ml-auto font-bold"
                href="/cy"
                hreflang="cy"
                lang="cy"
                rel="alternate"
              >
                <span
                  aria-describedby="lang-description"
                  class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
                >
                  Cymraeg
                </span>
              </a>
              <span
                class="sr-only"
                id="lang-description"
              >
                Newid yr iaith ir Gymraeg
              </span>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="hidden lg:block"
  >
    <div
      class="relative print:hidden"
    >
      <div
        class="container-auto flex items-center justify-center lg:justify-normal max-w-[1272px]"
      >
        <a
          aria-label="Evidence Hub"
          href="/en"
        >
          <img
            alt=""
            data-nimg="1"
            decoding="async"
            height="73"
            loading="lazy"
            src="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75"
            srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=256&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A3000%2FlogoPath&w=384&q=75 2x"
            style="color: transparent;"
            width="160"
          />
        </a>
        <div
          class="items-center hidden ml-auto lg:flex py-7"
        >
          <a
            class="group inline-flex items-center gap-2 focus-within:outline-none hover:text-pink-400 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-gray-600 visited:text-gray-600 mr-6 p-0 underline text-sm ml-6"
            href="/cy"
            hreflang="cy"
            lang="cy"
            rel="alternate"
          >
            <span
              aria-describedby="lang-description"
              class="inline-block relative after:content-[''] after:inline-block after:absolute after:-bottom-1 after:left-0 after:bg-white after:w-full after:h-[1px] group-hover:after:h-[2px] "
            >
              Cymraeg
            </span>
          </a>
          <span
            class="sr-only"
            id="lang-description"
          >
            Newid yr iaith ir Gymraeg
          </span>
          <form
            action="https://maps.org.uk/en/search-results.html"
            class="flex lg:w-[266px] w-full h-9 border-gray-600 relative z-1 border-1 rounded pr-8"
            data-testid="form-search"
            role="search"
          >
            <input
              aria-label="Search"
              class="w-full p-2 rounded-l"
              id="q"
              name="q"
              required=""
              type="text"
            />
            <button
              aria-label="Search"
              class="p-1 bg-magenta-500 text-white rounded-r absolute right-[-1px] top-[-1px] shadow-bottom-gray max-h-9 max-w-9"
              type="submit"
            >
              <svgr-mock
                aria-hidden="true"
                classname=""
              />
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      class="hidden lg:block"
    >
      <div
        class="container-auto max-w-[1272px] mt-5 mb-2"
      >
        <nav>
          <ul
            class="flex h-[40px] items-center"
          />
        </nav>
      </div>
    </div>
  </div>
</header>
`;
